fix: make SecurityConfig CORS origins configurable via app.cors.allowed-origins